--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "datasets>=3.2.0",
+    "huggingface-hub>=0.28.1",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
     "opencv-python>=4.11.0.86",
