--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "matplotlib>=3.10.0",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
+    "pip>=25.0",
     "polars>=1.21.0",
     "pydantic>=2.10.6",
     "rich>=13.9.4",
+    "torch>=2.6.0",
+    "ultralytics>=8.3.23",
 ]
